refactoring code using  Sonar